# Barley

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jorkyin/barley/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/FFmpeg3/libavcodec/: avcodec.h
app/src/main/cpp/include/FFmpeg3/libavfilter/: avfilter.h
app/src/main/cpp/include/FFmpeg3/libavutil/: frame.h  timecode.h
app/src/main/cpp/include/Native/: NativeCaler.h  NativeCallBack.h  codec_param.h  h264_decoder.h  opensl_io.h  packet_queue.h  wheat_codec.h
app/src/main/cpp/include/rtlib/: rt_object_api.h  rt_p2p_api_define.h
app/src/main/cpp/src/: NativeCallBack.c  NativeCaller.c  h264_decoder.c  java_jni_RTMap.c  opensl_io.c  packet_queue.c  wheat_codec.c
app/src/main/java/com/jorkyin/barley/SQL/: DatabaseHelper.java
app/src/main/java/com/jorkyin/barley/base/: OnClickItemViewListener.java
app/src/main/java/com/jorkyin/barley/model/: NativeCallBack.java  NativeCaller.java
app/src/main/java/com/jorkyin/barley/util/: ConfigInfo.java  Const.java  P2PParam.java  PermissionHandle.java  (+2 more)
app/src/main/res/drawable/: max_radius_rim.xml
app/src/main/res/layout/: activity_camera_add.xml  activity_camera_folder.xml  activity_config.xml  activity_live.xml  activity_main.xml  activity_scan.xml  activity_search.xml  item_camera.xml  item_config.xml  item_folder.xml  item_photo.xml  item_search.xml  public_header.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/jorkyin/barley/: ExampleUnitTest.java
(+14 files in other folders)
